--- a/user-login/views/layout.jade
+++ b/user-login/views/layout.jade
@@ -1,7 +1,38 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Welcome
+    // Bootstrap core CSS
+    link(href='/stylesheets/bootstrap.css', rel='stylesheet')
+    link(href='/stylesheets/style.css', rel='stylesheet')
   body
-    block content
+    .navbar.navbar-default
+     .container
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#') NodeAuth
+      .navbar-collapse.collapse
+        ul.nav.navbar-nav
+          li(class=(title == 'Members'?'active':''))
+            a(href='/') Members
+          li(class=(title == 'Register'?'active':''))
+            a(href='/users/register') Register
+          li(class=(title == 'Login'?'active':''))
+            a(href='/users/login') Login
+        ul.nav.navbar-nav.navbar-right
+          li
+            a(href='/users/logou') Logout
+        
+    .container
+     block content
+    hr
+    footer
+      p(class='text-center') © 2016 Company, Inc.
+
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='javascripts/bootstrap.js')
+
