--- a/user-login/views/layout.jade
+++ b/user-login/views/layout.jade
@@ -17,22 +17,26 @@ html
         a.navbar-brand(href='#') NodeAuth
       .navbar-collapse.collapse
         ul.nav.navbar-nav
-          li(class=(title == 'Members'?'active':''))
-            a(href='/') Members
-          li(class=(title == 'Register'?'active':''))
-            a(href='/users/register') Register
-          li(class=(title == 'Login'?'active':''))
-            a(href='/users/login') Login
+          if user
+           li(class=(title == 'Members'?'active':''))
+             a(href='/') Members
+          if !user
+           li(class=(title == 'Register'?'active':''))
+             a(href='/users/register') Register
+           li(class=(title == 'Login'?'active':''))
+             a(href='/users/login') Login
         ul.nav.navbar-nav.navbar-right
-          li
-            a(href='/users/logou') Logout
+          if user
+           li
+             a(href='/users/logout') Logout
         
     .container
+     != messages()
      block content
     hr
     footer
       p(class='text-center') © 2016 Company, Inc.
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    script(src='javascripts/bootstrap.js')
+    script(src='/javascripts/bootstrap.js')
 
