--- a/user-login/views/login.jade
+++ b/user-login/views/login.jade
@@ -3,7 +3,7 @@ extends layout
 block content
  h2.page-header Register
  p Please login below
- form(method='post',action='/users/register')
+ form(method='post',action='/users/login')
 
   .form-group
    label UserName
