--- a/node-blog/nodeblog/views/layout.jade
+++ b/node-blog/nodeblog/views/layout.jade
@@ -16,6 +16,7 @@ html
           a(href='/categories/add') Add Category
 
 
+    != messages()      
     block content
     footer
      p NodeBlog &copy; 2017
